--- a/src/main/java/Preemptive/scheduling.conf
+++ b/src/main/java/Preemptive/scheduling.conf
@@ -1,5 +1,5 @@
-// # of Process	
-numprocess 5
+// # of Preemptive.Process
+numprocess 3
 
 // mean deivation
 meandev 1100
@@ -9,8 +9,6 @@ standdev 510
 
 // process    # I/O blocking
 process 100
-process 200
-process 300
 process 500
 process 30
 
